<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >
    <TextView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/signup"
        android:layout_margin="@dimen/signup_margin"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/signup_margin"
        android:text="@string/signupinfo"
        android:textAlignment="center"
        android:textColor="@color/grey_90"
        android:textSize="@dimen/signup_subtitle"
        app:layout_constraintEnd_toEndOf="@+id/signup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

    <EditText
        android:id="@+id/email_signup_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/signup_margin"
        android:hint="@string/hintEmail"
        android:textColorHint="@color/grey_40"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/password_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/signup_margin"
        android:hint="@string/hintPassword"
        android:textColorHint="@color/grey_40"
        app:layout_constraintEnd_toEndOf="@+id/email_signup_editText"
        app:layout_constraintStart_toStartOf="@+id/email_signup_editText"
        app:layout_constraintTop_toBottomOf="@+id/email_signup_editText" />

    <EditText
        android:id="@+id/confirmpassword_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/signup_margin"
        android:textColorHint="@color/grey_40"
        android:hint="@string/hintConfrimPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/password_signup"
        app:layout_constraintTop_toBottomOf="@+id/password_signup" />

    <Button
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/signup_margin"
        android:background="@color/colorPrimary"
        android:text="@string/createaccount"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/confirmpassword_signup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/confirmpassword_signup"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword_signup" />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:clickable="true"
        android:text="@string/have_account"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/create_account"
        app:layout_constraintTop_toBottomOf="@+id/create_account" />

    <TextView
        android:id="@+id/login_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@android:color/white"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/have_account"
        app:layout_constraintStart_toEndOf="@+id/have_account"
        app:layout_constraintTop_toTopOf="@+id/have_account" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/signup_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/have_account" />

    <TextView
        android:id="@+id/policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/signup_margin"
        android:background="@android:color/white"
        android:text="@string/policy"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>
